Fix shelf list top padding (overflow into header issue)

--- a/src/app/shelves/shelves-list.component.scss
+++ b/src/app/shelves/shelves-list.component.scss
@@ -72,5 +72,5 @@ img.artist-image:after {
 }
 
 .shelf-list-container {
-    padding: 0px 50px 50px 20px;
+    padding: 10px 50px 50px 20px;
 }
